<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Action">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="16dp"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="UseCompoundDrawables">

        <com.github.chrisbanes.photoview.PhotoView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginStart="5dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="5dp"
            android:layout_marginBottom="6dp"
            android:layout_weight="1"
            android:contentDescription="@string/img"
            android:elevation="3dp"
            app:srcCompat="@mipmap/img" />

        <ProgressBar
            android:id="@+id/progressBar"
            android:indeterminateTint="@color/colorPrimaryDark"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:indeterminate="true" />

        <TextView
            android:id="@+id/Progress"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="6dp"
            android:gravity="center_horizontal"
            android:textColor="@color/colorPrimaryDark"
            android:text="@string/Progress"
            android:textAppearance="@style/TextAppearance.AppCompat.Caption" />

        <View
            android:layout_width="wrap_content"
            android:layout_height="3dp"
            android:layout_marginTop="6dp"
            android:background="@xml/separator" />

        <TextView
            android:id="@+id/Use"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="6dp"
            android:layout_marginBottom="20dp"
            android:background="?android:selectableItemBackground"
            android:clickable="true"
            android:focusable="true"
            android:gravity="center_horizontal"
            android:onClick="onClickTextView"
            android:paddingTop="6dp"
            android:paddingBottom="6dp"
            android:text="@string/Use"
            android:textAppearance="@style/TextAppearance.AppCompat.Button" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>